--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -105,7 +105,7 @@
                                 <i class="fas fa-lock"></i>
                             </span>
                         </button>
-                        <p class="small text-danger my-0">
+                        <p class="small text-danger mt-2 my-0">
                             <span class="icon">
                                 <i class="fas fa-exclamation-circle"></i>
                             </span>
