--- a/staticfiles/checkout/css/checkout.css
+++ b/staticfiles/checkout/css/checkout.css
@@ -1,7 +1,7 @@
 .StripeElement,
 .stripe-style-input {
   box-sizing: border-box;
-  height: 40px;
+  /* height: 40px; */
   padding: 10px 12px;
   border: 1px solid transparent;
   border-radius: 0px;
@@ -53,7 +53,7 @@ select option[value=""] {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
+    background: black;
     z-index: 9999;
 }
 
@@ -63,4 +63,35 @@ select option[value=""] {
     justify-content: center;
     margin: 0;
     height: 100%;
+}
+
+fieldset {
+    background-color: #f8f8f8;  /* Light gray background */
+    border-radius: 10px;
+    padding: 20px;
+    border: 1px solid #ddd;  /* Light border */
+}
+
+.btn-outline-black {
+    background-color: #f1f1f1 !important;
+    color: #333 !important;
+    border: 2px solid #333 !important;
+    padding: 10px 20px !important;
+    border-radius: 5px !important;
+}
+
+.btn-outline-black:hover {
+    background-color: #ddd !important;
+    color: #000 !important;
+}
+
+.btn-black {
+    background-color: #000 !important;
+    color: white !important;
+    padding: 10px 20px !important;
+    border-radius: 5px !important;
+}
+
+.btn-black:hover {
+    background-color: gray !important;
 }
